lao_line_break: add lang attribute

--- a/gap-analysis/lao-tests/lao_line_break.html
+++ b/gap-analysis/lao-tests/lao_line_break.html
@@ -21,7 +21,7 @@ font-size: 2em;
 <div id="instructions">
 Change the width of the browser window and observe break points.<br/>
 <b class="instructions">Test passes if</b> the text breaks at word or syllable boundaries.</div>
-<div class="test" id="test">ບຸກຄົນແຕ່ລະຄົນມີສິດທີ່ຈະຈາກປະເທດໃດປະເທດໜື່ງໄປ ນັບທັງປະເທດຂອງຕົນດ້ວຍ ແລະ ກັບຄືນມາໃນປະເທດຂອງຕົນໄດ້.</div>
+<div class="test" id="test" lang="lo">ບຸກຄົນແຕ່ລະຄົນມີສິດທີ່ຈະຈາກປະເທດໃດປະເທດໜື່ງໄປ ນັບທັງປະເທດຂອງຕົນດ້ວຍ ແລະ ກັບຄືນມາໃນປະເທດຂອງຕົນໄດ້.</div>
 
 
 </body>
