--- a/gap-analysis/java-gap.html
+++ b/gap-analysis/java-gap.html
@@ -16,9 +16,9 @@
       //previousMaturity:  "FPWD",
 
       noRecTrack:           true,
-      shortName:            "java-jv-gap",
+      shortName:            "java-gap",
       copyrightStart:       "2018",
-      edDraftURI:           "http://w3c.github.io/sealreq/gap-analysis/java-jv-gap.html",
+      edDraftURI:           "http://w3c.github.io/sealreq/gap-analysis/java-gap.html",
 
       // if this is a LCWD, uncomment and set the end of its review period
       // lcEnd: "2009-08-05",
@@ -50,7 +50,7 @@
       // langs array lists languages addressed by this document, in order of speaker (highest first)
       // it is used to generate the javascript needed for the matrix
       langs: ['Javanese'],
-      gapDocPath: 'https://w3c.github.io/sealreq/gap-analysis/java-jv-gap',
+      gapDocPath: 'https://w3c.github.io/sealreq/gap-analysis/java-gap',
 
 
       // URI of the patent status for this WG, for Rec-track documents
@@ -337,12 +337,12 @@
 
 
 
-<section id="initialletter" class="tbd">
+<section id="initialletter" class="na">
     <h3>Initial letter styling</h3>
     <p class="status_prompt">Does the browser or ereader correctly handle special styling of the initial letter of a line or paragraph, such as for drop caps or similar? How about  the size relationship between the large letter and the lines alongide? where does the large letter anchor relative to the lines alongside? is it normal to include initial quote marks in the large letter? is the large letter really a syllable? etc. Are all of these things working as expected? .<a href="http://w3c.github.io/typography/index#initial_letter">See available information</a> or <a href="https://github.com/w3c/i18n-activity/issues?utf8=%E2%9C%93&amp;q=is%3Aissue%20is%3Aopen%20label%3Ainitial-letter%20label%3Atype-info-request">check for currently needed data</a>.</p>
 
 
-    <p></p>
+    <p>Initial-letter styling of the kind that ressembles drop caps doesn't appear to be a feature of Javanese script (although there is <a href="https://github.com/w3c/sealreq/issues/12">one example</a> of Sundanese written with the Javanese script).</p>
 </section>
 
 
