+lao gap analysis

--- a/gap-analysis/lao-tests/lao_line_break.html
+++ b/gap-analysis/lao-tests/lao_line_break.html
@@ -10,19 +10,35 @@
 
 /* the CSS below is not part of the test */
 .test, .ref {
-margin: 20px;
+margin: 2em 5%;
 font-size: 2em;
 }
+.test {
+width: 90%;
+font-size: 36px;
+border: 1px solid orange;
+height: 3em;
+overflow: hidden;
+}
+#assertion, #advice { font-style: italic; color: #666; }
 </style>
 </head>
 <body>
 
-<div id="assertion"><b class="assertion">Assertion:</b> Lines break at word boundaries.</div>
-<div id="instructions">
-Change the width of the browser window and observe break points.<br/>
-<b class="instructions">Test passes if</b> the text breaks at word or syllable boundaries.</div>
-<div class="test" id="test" lang="lo">ບຸກຄົນແຕ່ລະຄົນມີສິດທີ່ຈະຈາກປະເທດໃດປະເທດໜື່ງໄປ ນັບທັງປະເທດຂອງຕົນດ້ວຍ ແລະ ກັບຄືນມາໃນປະເທດຂອງຕົນໄດ້.</div>
+<div id="assertion"><b class="assertion">Assertion:</b> Lao text lines break at word boundaries.</div>
+<div id="advice"><b class="advice">Advice:</b> Use the slider to adjust the width of the box and observe break points.<br/>
+<input id="fontSizeSlider" min="10" max="90" step=".25" value="90" oninput="document.getElementById('sizeIndicator').textContent = this.value; 
+tests = document.querySelectorAll('.test'); for (let i=0;i<tests.length;i++) { tests[i].style.width = this.value+'%';}" style="width:80%; margin-left: 5%;" type="range"> <span id="sizeIndicator" style="font-size:80%;">90</span>%</div>
+<div><b class="instructions">Test passes if</b> the text breaks at orthographic syllable boundaries.</div>
 
+
+<div class="test" id="test" lang="lo">ບຸກຄົນແຕ່ລະຄົນມີສິດທີ່ຈະຈາກປະເທດໃດປະເທດໜື່ງໄປ</div>
+
+<div class="test" lang="lo">ນັບທັງປະເທດຂອງຕົນດ້ວຍ ແລະ ກັບຄືນມາໃນປະເທດຂອງຕົນໄດ້.</div>
+
+<div class="test" lang="lo">ກັບຊິມີເຄື່ອງຫມາຍ</div>
+
+<!-- document.getElementById('test').style.width = this.value+'%'; -->
 
 </body>
 </html>
