lao_line_break test: lengthened third line

--- a/gap-analysis/lao-tests/lao_line_break.html
+++ b/gap-analysis/lao-tests/lao_line_break.html
@@ -36,7 +36,7 @@ tests = document.querySelectorAll('.test'); for (let i=0;i<tests.length;i++) { t
 
 <div class="test" lang="lo">ນັບທັງປະເທດຂອງຕົນດ້ວຍ ແລະ ກັບຄືນມາໃນປະເທດຂອງຕົນໄດ້.</div>
 
-<div class="test" lang="lo">ກັບຊິມີເຄື່ອງຫມາຍ</div>
+<div class="test" lang="lo">specific test for ຫມ break: ກັບຊິມີເຄື່ອງຫມາຍ</div>
 
 <!-- document.getElementById('test').style.width = this.value+'%'; -->
 
