java, Fix acknowledgements

--- a/javanese/index.html
+++ b/javanese/index.html
@@ -229,7 +229,7 @@
     <h2>Acknowledgements</h2>
 
 <p>Special thanks to the following people who contributed to this document (contributors' names listed in in alphabetic order).</p>
-<p>Ben Mitchell, Danh Hong, Marc Durdin, Martin Hosken.</p>
+<p>Aditya Bayu Perdana, Evelyn Teo, @Ilhamkang, Norbert Lindenberg.</p>
 <p data-lang="en">Please find the latest info of the contributors at the <a href="https://github.com/w3c/sealreq/graphs/contributors">GitHub contributors list</a>.</p>
 </section>
 </body>
