lao ga, Word & letter spacing

--- a/gap-analysis/laoo-gap.html
+++ b/gap-analysis/laoo-gap.html
@@ -339,12 +339,13 @@
 
 
 
-<section id="spacing" class="tbd">
+<section id="spacing" class="ok">
     <h3>Word &amp; letter spacing</h3>
     <p class="status_prompt">Some scripts create emphasis or other effects by spacing out the letters or syllables in a word. Are there requirements for this script/language that are unsupported? (For justification related spacing, see below.) See <a href="https://w3c.github.io/typography/index#letter_spacing">available information</a> or <a href="https://github.com/w3c/i18n-activity/issues?utf8=%E2%9C%93&amp;q=is%3Aissue%20is%3Aopen%20label%3Ainline-spacing%20label%3Atype-info-request">check for currently needed data</a>.</p>
 
 
-    <p></p>
+    <p>We don't appear to have sufficient information at this point to determine the rules and expectations for this in Lao. There is a <a href="https://github.com/w3c/sealreq/issues/17">useful discussion of the issue in the GitHub issue list</a>.</p>
+<p>Marking this section as OK for now.</p>
 </section>
 
 
