java-gap, Point to useful discussion about initials.

--- a/gap-analysis/java-gap.html
+++ b/gap-analysis/java-gap.html
@@ -355,6 +355,7 @@
 
 
     <p>Initial-letter styling of the kind that ressembles drop caps doesn't appear to be a feature of Javanese script (although there is <a href="https://github.com/w3c/sealreq/issues/12">one example</a> of Sundanese written with the Javanese script).</p>
+<p>There is a <a href="https://github.com/w3c/sealreq/issues/12">discussion in a GitHub issue</a> about this for Sundanese written with the Javanese script.</p>
 </section>
 
 
