charter, link fix

--- a/charter/index.html
+++ b/charter/index.html
@@ -159,12 +159,10 @@ src="https://www.w3.org/Icons/w3c_home" width="72" /></a></p>
 <li><a href="http://www.w3.org/Style/CSS/members">CSS Working Group</a></li>
 <li><a href="http://www.w3.org/html/wg/">HTML Working Group</a></li>
 <li><a href="http://unicode.org/">Unicode Consortium</a></li>
-<li><a href="http://www.w3.org/2008/webapps/">Digital Publications
-                Working Group</a></li>
+<li><a href="https://www.w3.org/publishing/groups/publ-wg/">Publishing Working Group</a></li>
 <li><a href="http://www.w3.org/Graphics/SVG/">SVG Working Group</a></li>
 </ul>
 </dd>
-<dt><br />
 <dt>Other Groups</dt>
 <dd>The  Task Force is also expected to take advantage of opportunities for discussion and collaboration with existing groups and communities in <span class="mission">African</span> countries as well as groups and communities elsewhere.</dd>
 </dl>
