Change example in Figure 3
Propose a change from "ผู้เชี่ย" (1) to "พรุ่งนี้" (2).

The word in (1) does not have meaning, and "เชี่ย" can be a rude word.
Changed to (2) which should be enough to illustrate combining characters above and below base characters.

(2) means "tomorrow".

--- a/thai/index.html
+++ b/thai/index.html
@@ -211,7 +211,7 @@
       <h3>Line height</h3>
 <p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition, Thai tends to adds more interline spacing than Latin text does.</p>
 <figure>
-<p class="large">ผู้เชี่ย</p>
+<p class="large">พรุ่งนี้</p>
 <figcaption>An example of a word with combining characters above and below base characters.</figcaption>
 </figure>
 </section>
