Correct Thai examples

--- a/thai/index.html
+++ b/thai/index.html
@@ -134,13 +134,13 @@
 <p>Spaces are used in Thai as phrase separators, but Thai doesn't separate words in a phrase using visible spaces. </p>
 <p>There is, however, a concept of words in the text. For example, lines are supposed to be broken at word boundaries. </p>
 <figure>
-<p class="large">รวม|ทั้งวิ|ทยาการ|ด้าน|คอมพิว</p>
+<p class="large">รวม|ทั้ง|วิทยาการ|ด้าน|คอมพิว</p>
 <figcaption>Word boundaries occur where the vertical lines appear, though they are not marked by the script.</figcaption>
 </figure>
 <p>The main difficulty arises when dealing with compound words. It can often be difficult to decide whether a given string of syllables represents multiple words or a single compound word.</p>
 <figure>
-<p class="large">ตัวอย่าง|การเข้ยน|ภาษาไทย</p>
-<p class="large">ตัวอย่าง|การ|เข้ยน|ภาษา|ไทย</p>
+<p class="large">ตัวอย่าง|การเขียน|ภาษาไทย</p>
+<p class="large">ตัวอย่าง|การ|เขียน|ภาษา|ไทย</p>
 <figcaption>Alternative line break opportunities for Thai text using compound nouns.</figcaption>
 </figure>
 <p>The variation may be related to the operation being performed on the text (eg. line breaking in narrow newsprint columns, vs. double-click selection, vs. cursor movement, etc.), or it may just   be down to personal preference,</p>
@@ -211,7 +211,7 @@
       <h3>Line height</h3>
 <p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition, Thai tends to adds more interline spacing than Latin text does.</p>
 <figure>
-<p class="large">ผู้เชี่ย</p>
+<p class="large">พรุ่งนี้</p>
 <figcaption>An example of a word with combining characters above and below base characters.</figcaption>
 </figure>
 </section>
