--- a/khmer/index.html
+++ b/khmer/index.html
@@ -31,27 +31,17 @@
 
       wg:           "Internationalization Working Group",
       wgURI:        "https://www.w3.org/International/core/",
-      wgPublicList: "public-i18n-sealreq",
-      bugTracker: { new: "https://github.com/w3c/sealreq/issues", open: "https://github.com/w3c/sealreq/issues" } ,
-      otherLinks: [
-        {
-          key: "Github",
-          data: [
-          {
-            value: "repository",
-            href: "https://github.com/w3c/sealreq"
-          }
-          ]
-        }
-      ],
+ 
+ 	  github:	"w3c/sealreq",
+             
+      
+
 
       // URI of the patent status for this WG, for Rec-track documents
-      // !!!! IMPORTANT !!!!
       // This is important for Rec-track documents, do not copy a patent URI from a random
       // document unless you know what you're doing. If in doubt ask your friendly neighbourhood
       // Team Contact.
       wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/32113/status",
-      // !!!! IMPORTANT !!!! MAKE THE ABOVE BLINK IN YOUR HEAD
     };
   </script>
   <link rel="stylesheet" href="local.css" type="text/css">
@@ -64,16 +54,8 @@
 
   <div id="sotd">
     <p>This document describes the basic requirements for Khmer script layout and text support on the Web and in eBooks. These requirements provide information for Web technologies such as CSS, HTML and digital publications about how to support users of Khmer scripts. Currently the document focuses on Khmer as used for the Khmer language. The information here is developed in conjunction with a <a href="../gap-analysis/khmer-gap.html">document that summarises gaps</a> in support on the Web for Khmer.</p>
-<p>The editor's draft of this document is being developed by the <a href="https://www.w3.org/International/groups/#mission">Southeast Asian Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
-
-    <div class="note">
-      <p data-lang="en" style="font-weight: bold; font-size: 120%">Sending comments on this document</p>
-
-      <p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/sealreq/issues" style="font-size: 120%;">github issues</a>. Only send comments by email if you are unable to raise issues on github (see links below). All comments are welcome.</p>
-
-      <p data-lang="en">To make it easier to track comments, please raise separate issues or emails for each comment, and point to the section you are commenting on&nbsp; using a URL.</p>
-    </div>
-  </div>
+	<p>The editor's draft of this document is being developed by the <a href="https://github.com/w3c/sealreq/">Southeast Asian Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
+	</div>
 
   <section id="h_introduction">
     <h2>Introduction</h2>
