gap analysis, Change labels lo->laoo, km->khmr, jv->java

--- a/gap-analysis/java-gap.html
+++ b/gap-analysis/java-gap.html
@@ -472,7 +472,7 @@ It is linked to from the <a href="http://w3c.github.io/typography/gap-analysis/l
 <script>
 setUpSummary()
 addPrompts() 
-getAllData('sealreq','doc:jv')
+getAllData('sealreq','doc:java')
 </script>
 
 
