--- a/gap-analysis/laoo-gap.html
+++ b/gap-analysis/laoo-gap.html
@@ -472,7 +472,7 @@ It is linked to from the <a href="https://w3c.github.io/typography/gap-analysis/
 <script>
 setUpSummary()
 addPrompts() 
-getAllData('sealreq','doc:lo')
+getAllData('sealreq','doc:laoo')
 </script>
 
 
